Fix mobile screen overflow elements

--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,7 @@ a {
 .app-container {
   position: relative;
   width: 100%;
+  overflow-x: hidden;
 }
 
 #canvas-container {
